syntax = "proto3";

package pb;

import "google/protobuf/timestamp.proto";

option go_package = "github.com/gufir/money-management/pb";

message User {
    string username = 1;
    string full_name = 2;
    string email = 3;
    google.protobuf.Timestamp created_at = 4;
    string user_uuid = 5;

}